--- a/broccoli/BroccoliMvc/Views/Home/Index.cshtml
+++ b/broccoli/BroccoliMvc/Views/Home/Index.cshtml
@@ -42,7 +42,15 @@
 </div>
 <div class="main">
     <div class="center-content">
-        <div class="panel">
+        <div class="panel about-forex">
+            <h3>Торговля на рынке Форекс</h3>
+            <p class="about-forex-text">Торговля на форекс – это вариант заработка в Интернете, который давно привлёк к себе внимание со стороны желающих получать достойный доход, при этом используя все плюсы удалённой работы. Всё что нужно для начала торговли - это <a href="http://www.forexinn.ru/register/a/broccoli">открыть счёт у форекс брокера</a> и ежедневно отслеживать ситуацию на рынке, с целью продавать валюту, когда она дорожает, и соответственно покупать, когда её цена падает, то есть заниматься абсолютно законными спекулятивными операциями.</p>
+            <img class="first-img" src="@Url.Content("~/Content/img/depositphotos_13564193-Stock-market-and-mobile-banking-on-digital-devices.png")"/>
+        </div>
+        <div class="panel hr-shadow advisor">
+            <h3>Автоматические торговые<br/> системы форекс.<br/> Советники.</h3>
+            <img class="first-img" src="@Url.Content("~/Content/img/dep_6188998-Printed-forex-chart-with-pen---uncertainty-of-future.jpg")"/>
+            <p class="advisor-text">В целом, торговля на бирже форекс – это рутинная работа, которая требует постоянного присутствия и анализа рынка. Значительно облегчить и автоматизировать работу трейдера, помогают торговые системы от компании Broccoli Trade. Мы постоянно отслеживаем изменения на валютном рынке и в мировой экономике, корректируя рекомендации по настройкам и создавая новые версии программ.</p>
             <div id="pricing-table">
                 <div class="plan plan1">
                     <div class="price-header">Money +</div>
@@ -55,7 +63,7 @@
                         <li><strong>ТФ-H1</strong></li>
                         <li>Рекомендуемые<br/> валютные пары<br/><strong>EURUSD, GBPUSD</strong></li>
                     </ul>
-                    <a class="signup" href="@Url.Action("TradingSystemOrder", "PersonalCabinet", new { id = 1 })">Получить</a>         
+                    <a class="signup" href="@Url.Action("TradingSystemOrder", "PersonalCabinet", new { id = 1 })">Выбрать</a>         
                 </div >
                 <div class="plan plan2">
                     <div class="price-header">Garanted</div>
@@ -68,7 +76,7 @@
                         <li><strong>ТФ-М15</strong></li>
                         <li>Рекомендуемые<br/> валютные пары<br/><strong>EURUSD, GBPUSD</strong></li>
                     </ul>
-                    <a class="signup" href="@Url.Action("TradingSystemOrder", "PersonalCabinet", new { id = 2 })">Получить</a>            
+                    <a class="signup" href="@Url.Action("TradingSystemOrder", "PersonalCabinet", new { id = 2 })">Выбрать</a>            
                 </div>
                 <div class="plan plan3 popular-plan">
                     <div class="price-header">Max trade</div>
@@ -81,9 +89,20 @@
                         <li><strong>ТФ-М15</strong></li>
                         <li>Рекомендуемые<br/> валютные пары<br/><strong>EURUSD, GBPUSD, AUDUSD, USDCAD, USDCHF</strong></li>
                     </ul>
-                    <a class="signup" href="@Url.Action("TradingSystemOrder", "PersonalCabinet", new { id = 3 })">Получить</a>        
+                    <a class="signup" href="@Url.Action("TradingSystemOrder", "PersonalCabinet", new { id = 3 })">Выбрать</a>        
                 </div>	
             </div>
+            <h3 class="for-trader-title">Автоматические торговые системы позволяют трейдеру:</h3>
+            <ul class="for-trader-list">
+                <li>существенно увеличить количество свободного времени, при этом работать на бирже Forex 24 часа в сутки;</li>
+                <li>создавать собственные торговые стратегии и зарабатывать достойные деньги;</li>
+                <li>избавиться от необходимости постоянно находиться у монитора, наблюдая за колебаниями курса;</li>
+                <li>заключить выгодную сделку в максимально короткие сроки;</li>
+                <li>изменять настройки, выбирать валюту и алгоритм заключения сделок;</li>
+                <li>устанавливать полномочия системы для максимального снижения рисков;</li>
+                <li>продуктивно работать, имея даже начальный уровень профессиональной подготовки.</li>
+            </ul>
+            <p class="advisor-def"><strong>Советники форекс</strong> - <strong>бесплатный</strong>, уникальный и проверенный на реальной практике программный продукт, разработанный опытными трейдерами и аналитиками, реализованный профессиональными программистами. Для успешной работы и заработка на форексе, сделайте первый правильный шаг – <strong>бесплатно</strong> заведите личного торгового советника.</p>
         </div>
         <div class="panel">
             <table class="open-account-instructions hr-shadow">
