--- a/broccoli/BroccoliMvc/Content/Site.css
+++ b/broccoli/BroccoliMvc/Content/Site.css
@@ -410,28 +410,27 @@ hr {
     height: 100%;
 }
 
-.content .banner .slider .second img {
+.content .slider .second img {
     width: 350px;
-    margin-top: 85px;
+    margin-top: 55px;
     margin-left: 40px;
 }
 
-.content .banner .slider .second img:hover {
+.content .slider .second p {
+    margin-top: 30px;
+}
+
+.content .slider .second img:hover {
     box-shadow: 0px 0px 5px rgb(133, 133, 133);
     -webkit-box-shadow: 0px 0px 5px rgb(133, 133, 133);
     -moz-box-shadow: 0px 0px 5px rgb(133, 133, 133);
     cursor: pointer;
 }
 
-.content .banner .slider .third {
-    width: 917px;
-    height: 100%;
-}
-
-.content .banner .slider .third img {
+.content .slider .third img {
     width: 260px;
-    margin-top: 95px;
-    margin-left: 80px;
+    margin-top: 45px;
+    margin-left: -15px;
 }
 
 .content .banner .slider .broccoli {
