--- a/broccoli/BroccoliMvc/Scripts/slider/parallax.css
+++ b/broccoli/BroccoliMvc/Scripts/slider/parallax.css
@@ -45,9 +45,15 @@
 	left: 10%;
 	opacity: 1;
 }
+.da-slide .text {
+    height: 100%;
+    width: 917px;
+    margin: 0 auto;
+    position: relative;
+}
 .da-slide h2{
     width: 430px;
-    margin-left: 600px;
+    margin-left: 390px;
 	top: 60px;
 	z-index: 10;
 	text-shadow: 1px 1px 1px rgba(0,0,0,0.1);
@@ -59,7 +65,7 @@
 .da-slide p{
     width: 430px;
 	top: 155px;
-    margin-left: 600px;
+    margin-left: 390px;
 	font-size: 18px;
 	line-height: 26px;
 	height: 100px;
@@ -98,7 +104,7 @@
 	text-align: center;
 	width: 30%;
 	top: 30px;
-    margin-left: -590px;
+    margin-left: -515px;
 	height: 256px;
 	line-height: 320px;
 	left: 110%; /*60%*/
