--- a/broccoli/BroccoliMvc/Views/Home/Index.cshtml
+++ b/broccoli/BroccoliMvc/Views/Home/Index.cshtml
@@ -108,7 +108,7 @@
             <div id="pricing-table">
                 <div class="plan plan1">
                     <div class="price-header">Money +</div>
-                    <div class="price">200 - 300%</div>  
+                    <div class="price">200% - 300%</div>  
                     <div class="monthly">за 5 лет</div>      
                     <ul>
                         <li>Выставление риска <strong>Нет</strong></li>
@@ -121,8 +121,8 @@
                 </div >
                 <div class="plan plan2">
                     <div class="price-header">Garanted</div>
-                    <div class="price">4000 - 6000%</div>
-                    <div class="monthly">За 5 лет</div>  
+                    <div class="price">26,7% - 85,4%</div>
+                    <div class="monthly">Годовых</div>  
                     <ul>
                         <li>Выставление риска <strong>Есть</strong></li>
                         <li>Минимальный депозит<br/><strong>100$</strong></li>
@@ -134,8 +134,8 @@
                 </div>
                 <div class="plan plan3 popular-plan">
                     <div class="price-header">Max trade</div>
-                    <div class="price">6000 - 9000%</div>
-                    <div class="monthly">За 5 лет</div>
+                    <div class="price">48,9% - 1008,5%</div>
+                    <div class="monthly">Годовых</div>
                     <ul>
                         <li>Выставление риска <strong>Есть</strong></li>
                         <li>Минимальный депозит<br/><strong>1000$</strong></li>
