--- a/broccoli/BroccoliMvc/Views/Home/Index.cshtml
+++ b/broccoli/BroccoliMvc/Views/Home/Index.cshtml
@@ -120,7 +120,7 @@
                     <a class="signup" href="@Url.Action("TradingSystemOrder", "PersonalCabinet", new { id = 1 })">Выбрать</a>         
                 </div >
                 <div class="plan plan2">
-                    <div class="price-header">Garanted</div>
+                    <div class="price-header two-line">Garanted Profit</div>
                     <div class="price">26,7% - 85,4%</div>
                     <div class="monthly">Годовых</div>  
                     <ul>
