--- a/broccoli/BroccoliMvc/Views/Home/VPS.cshtml
+++ b/broccoli/BroccoliMvc/Views/Home/VPS.cshtml
@@ -33,7 +33,7 @@
             <a class="signup" href="#">Выбрать</a>        
         </div>	
         <div class="plan plan2 popular-plan">
-            <div class="price-header">Проф.</div> 
+            <div class="price-header long">Профессиональный</div> 
             <ul>
                 <li>RAM: <strong>1024 Mb</strong></li>
                 <li>HDD: <strong>60 Gb</strong></li>
