--- a/broccoli/BroccoliMvc/Views/PersonalCabinet/PersonalCabinet.cshtml
+++ b/broccoli/BroccoliMvc/Views/PersonalCabinet/PersonalCabinet.cshtml
@@ -19,7 +19,7 @@
         <div id="pricing-table">
             <div class="plan plan1">
                 <div class="price-header">Money +</div>
-                <div class="price">200 - 300%</div>  
+                <div class="price">200% - 300%</div>  
                 <div class="monthly">за 5 лет</div>      
                 <ul>
                     <li>Выставление риска <strong>Нет</strong></li>
@@ -28,33 +28,33 @@
                     <li><strong>ТФ-H1</strong></li>
                     <li>Рекомендуемые<br/> валютные пары<br/><strong>EURUSD, GBPUSD</strong></li>
                 </ul>
-                <a class="signup" href="@Url.Action("TradingSystemOrder", "PersonalCabinet", new { id = 1 })">Получить</a>         
+                <a class="signup" href="@Url.Action("TradingSystemOrder", "PersonalCabinet", new { id = 1 })">Выбрать</a>         
             </div >
             <div class="plan plan2">
-                <div class="price-header">Garanted</div>
-                <div class="price">4000 - 6000%</div>
-                <div class="monthly">За 5 лет</div>  
+                <div class="price-header two-line">Garanted Profit</div>
+                <div class="price">26,7% - 85,4%</div>
+                <div class="monthly">Годовых</div>  
                 <ul>
                     <li>Выставление риска <strong>Есть</strong></li>
                     <li>Минимальный депозит<br/><strong>100$</strong></li>
                     <li>Рекомендуемый депозит<br/><strong>10.000$</strong></li>
                     <li><strong>ТФ-М15</strong></li>
-			        <li>Рекомендуемые<br/> валютные пары<br/><strong>EURUSD, GBPUSD</strong></li>
+                    <li>Рекомендуемые<br/> валютные пары<br/><strong>EURUSD, GBPUSD</strong></li>
                 </ul>
-                <a class="signup" href="@Url.Action("TradingSystemOrder", "PersonalCabinet", new { id = 2 })">Получить</a>            
+                <a class="signup" href="@Url.Action("TradingSystemOrder", "PersonalCabinet", new { id = 2 })">Выбрать</a>            
             </div>
             <div class="plan plan3 popular-plan">
                 <div class="price-header">Max trade</div>
-                <div class="price">6000 - 9000%</div>
-                <div class="monthly">За 5 лет</div>
+                <div class="price">48,9% - 1008,5%</div>
+                <div class="monthly">Годовых</div>
                 <ul>
                     <li>Выставление риска <strong>Есть</strong></li>
                     <li>Минимальный депозит<br/><strong>1000$</strong></li>
                     <li>Рекомендуемый депозит<br/><strong>10.000$</strong></li>
                     <li><strong>ТФ-М15</strong></li>
-			        <li>Рекомендуемые<br/> валютные пары<br/><strong>EURUSD, GBPUSD, AUDUSD, USDCAD, USDCHF</strong></li>
+                    <li>Рекомендуемые<br/> валютные пары<br/><strong>EURUSD, GBPUSD, AUDUSD, USDCAD, USDCHF</strong></li>
                 </ul>
-                <a class="signup" href="@Url.Action("TradingSystemOrder", "PersonalCabinet", new { id = 3 })">Получить</a>        
+                <a class="signup" href="@Url.Action("TradingSystemOrder", "PersonalCabinet", new { id = 3 })">Выбрать</a>        
             </div>	
         </div>
         <p>Внимание! Вы можете заказать советник только после открытия и активации счёта на сайте Broccoli-Trade.</p>
