--- a/broccoli/BroccoliMvc/Views/Shared/Footer.cshtml
+++ b/broccoli/BroccoliMvc/Views/Shared/Footer.cshtml
@@ -12,4 +12,5 @@
         Брокколи трэйд — это сайт, где Вы можете получить советники форекс бесплатно, инструменты инвестиций, позволяющие заработать на форекс сразу. Как начать торговать на форекс не имея опыта — брокколи трэйд — лучшее решение. Здоровые инвестиции.
     </p>
     <p class="copyright">2012 - @DateTime.Now.Year Broccoli-Trade.</p>
+    <a class="partner-link" href="@Url.Action("Partners", "Home")">Партнерская программа</a>
 </div>
