--- a/broccoli/BroccoliMvc/Views/Home/Partners.cshtml
+++ b/broccoli/BroccoliMvc/Views/Home/Partners.cshtml
@@ -10,7 +10,7 @@
 </div>
 
 <div class="center-content partners">
-    <p>Предлагаем Вашему вниманию партнёрскую программу, с помощью которой Вы сможете привлекать клиентов к нам на сайт, и зарабатывать по 3000$ за каждых 100 клиентов.</p>
+    <p style="font-size: 26px; font-weight: bold;">Предлагаем Вашему вниманию партнёрскую программу, с помощью которой Вы сможете привлекать клиентов к нам на сайт, и зарабатывать по 3000$ за каждых 100 клиентов.</p>
     <br/>
     <p style="line-height: 26px;">
         Вы регистрируетесь у нас в партнёрской программе.<br/>
@@ -48,7 +48,7 @@
         <li>Адрес вашего сайта (если есть)</li>
     </ul>
     <br/>
-    <p>В течении суток на Вашу почту, придёт письмо с ссылкой на регистрацию в партнёрской программе.</p>
+    <p>В течении суток на Вашу почту придёт письмо с ссылкой на регистрацию в партнёрской программе.</p>
     <br/>
-    <p style="color: red; font-weight: bold;">ВНИМАНИЕ! Партнёры использующие чёрные схемы продвижения - будут заблокированны.</p>
+    <p style="color: red; font-weight: bold;">ВНИМАНИЕ! Партнёры использующие чёрные схемы продвижения — будут заблокированны.</p>
 </div>
