--- a/broccoli/BroccoliMvc/Views/Home/Partners.cshtml
+++ b/broccoli/BroccoliMvc/Views/Home/Partners.cshtml
@@ -10,7 +10,7 @@
 </div>
 
 <div class="center-content partners">
-    <p style="font-size: 26px; font-weight: bold;">Предлагаем Вашему вниманию партнёрскую программу, с помощью которой Вы сможете привлекать клиентов к нам на сайт, и зарабатывать по 3000$ за каждых 100 клиентов.</p>
+    <p style="font-size: 26px; font-weight: bold;">Предлагаем Вашему вниманию партнёрскую программу, с помощью которой Вы сможете привлекать клиентов к нам на сайт и зарабатывать по 3000$ за каждых 100 клиентов.</p>
     <br/>
     <p style="line-height: 26px;">
         Вы регистрируетесь у нас в партнёрской программе.<br/>
