--- a/broccoli/BroccoliMvc/Views/Home/VPS.cshtml
+++ b/broccoli/BroccoliMvc/Views/Home/VPS.cshtml
@@ -13,7 +13,7 @@
     <div class="vps-info">
         <p>Для корректной работы советника торговый терминал должен быть включенным с открытия рынка до его закрытия. Если у Вас нет возможности держать компьютер в рабочем состоянии 24/5 - советуем использовать услугу VPS сервера.</p>
         <span class="button more">
-            <a href="#" target="_blank"><input class="large" type="button" value="Подробнее у ForexInn" /></a>
+            <a href="http://www.forexinn.ru/client/vps" target="_blank"><input class="large" type="button" value="Подробнее у ForexInn" /></a>
         </span>
         <img src="@Url.Content("~/Content/img/depositphotos_1934943-Fitness-alarm-clock.png")"/>
     </div>
@@ -27,7 +27,7 @@
                 <li>CPU: <strong>500 MHz</strong></li>
                 <li>RDP Access: <strong>+</strong></li>
             </ul>
-            <a class="signup" href="#">Выбрать</a>         
+            <a class="signup" href="https://my.forexinn.ru/vps/tariff/1">Выбрать</a>         
         </div >
         <div class="plan plan3">
             <div class="price-header">Стандартный</div>
@@ -37,7 +37,7 @@
                 <li>CPU: <strong>500 MHz</strong></li>
                 <li>RDP Access: <strong>+</strong></li>
             </ul>
-            <a class="signup" href="#">Выбрать</a>        
+            <a class="signup" href="https://my.forexinn.ru/vps/tariff/2">Выбрать</a>        
         </div>	
         <div class="plan plan2 popular-plan">
             <div class="price-header long">Профессиональный</div> 
@@ -47,7 +47,7 @@
                 <li>CPU: <strong>1000 MHz</strong></li>
                 <li>RDP Access: <strong>+</strong></li>
             </ul>
-            <a class="signup" href="#">Выбрать</a>            
+            <a class="signup" href="https://my.forexinn.ru/vps/tariff/3">Выбрать</a>            
         </div>
     </div>
     <div class="free-vps hr-shadow">
