--- a/broccoli/BroccoliMvc/Views/PersonalCabinet/TradingSystemOrder.cshtml
+++ b/broccoli/BroccoliMvc/Views/PersonalCabinet/TradingSystemOrder.cshtml
@@ -60,8 +60,10 @@
                     }
                 </li>
                 <li>2.&nbsp;&nbsp;Затем <a href="@Url.Action("ActivateAccount", "PersonalCabinet")">активируйте этот счет</a> на нашем сайте у себя в личном кабинете.</li>
-                <li>3.&nbsp;&nbsp;Выберите на этой странице счет и нажмите кнопку <strong>заказать</strong>.</li>
-                <li></li>
+                <li>
+                    <p>3.&nbsp;&nbsp;Выберите на этой странице счет и нажмите кнопку <strong>заказать</strong>.</p>
+                    <p class="description">Не более чем через 5 минут Ваш советник будет <a href="@Url.Action("OrderStatus", "PersonalCabinet")">доступен для скачивания</a>.</p>
+                </li>
             </ul>
         </div>
         <div class="broker-info">
