--- a/broccoli/BroccoliMvc/Views/Admin/Users.cshtml
+++ b/broccoli/BroccoliMvc/Views/Admin/Users.cshtml
@@ -42,4 +42,6 @@
             }
         </tbody>
     </table>
+    <br/>
+    <p><strong>Всего пользователей:</strong>&nbsp;@Model.users.Count()</p>
 </div>
