--- a/broccoli/BroccoliMvc/Content/Site.css
+++ b/broccoli/BroccoliMvc/Content/Site.css
@@ -1942,12 +1942,12 @@ footer#main{
 }
 
 .users {
-    
+    padding-top: 20px;   
 }
 
 .users .user-list {
     width: 100%;
-    margin-top: 30px;
+    margin-top: 20px;
     margin-bottom: 30px;
 }
 
