--- a/broccoli/BroccoliMvc/Views/Home/Index.cshtml
+++ b/broccoli/BroccoliMvc/Views/Home/Index.cshtml
@@ -88,12 +88,12 @@
                         <li><strong>ТФ-H1</strong></li>
                         <li>Рекомендуемые<br/> валютные пары<br/><strong>EURUSD, GBPUSD</strong></li>
                     </ul>
-                    <a class="signup" href="@Url.Action("TradingSystemOrder", "PersonalCabinet", new { id = 1 })">Выбрать</a>         
+                    <a class="signup" href="@Url.Action("TradingSystemOrder", "PersonalCabinet", new { id = 1 })">Подробнее</a>         
                 </div >
                 <div class="plan plan2">
                     <div class="price-header two-line">Garanted Profit</div>
                     <div class="price">26,7% - 85,4%</div>
-                    <div class="monthly">Годовых</div>  
+                    <div class="monthly">В год</div>  
                     <ul>
                         <li>Выставление риска <strong>Есть</strong></li>
                         <li>Минимальный депозит<br/><strong>100$</strong></li>
@@ -101,12 +101,12 @@
                         <li><strong>ТФ-М15</strong></li>
                         <li>Рекомендуемые<br/> валютные пары<br/><strong>EURUSD, GBPUSD</strong></li>
                     </ul>
-                    <a class="signup" href="@Url.Action("TradingSystemOrder", "PersonalCabinet", new { id = 2 })">Выбрать</a>            
+                    <a class="signup" href="@Url.Action("GarantedProfit", "Home")">Подробнее</a>            
                 </div>
                 <div class="plan plan3 popular-plan">
                     <div class="price-header">Max trade</div>
                     <div class="price">48,9% - 1008,5%</div>
-                    <div class="monthly">Годовых</div>
+                    <div class="monthly">В год</div>
                     <ul>
                         <li>Выставление риска <strong>Есть</strong></li>
                         <li>Минимальный депозит<br/><strong>1000$</strong></li>
@@ -114,7 +114,7 @@
                         <li><strong>ТФ-М15</strong></li>
                         <li>Рекомендуемые<br/> валютные пары<br/><strong>EURUSD, GBPUSD, AUDUSD, USDCAD, USDCHF</strong></li>
                     </ul>
-                    <a class="signup" href="@Url.Action("TradingSystemOrder", "PersonalCabinet", new { id = 3 })">Выбрать</a>        
+                    <a class="signup" href="@Url.Action("MaxTrade", "Home")">Подробнее</a>        
                 </div>	
             </div>
             <h3 class="for-trader-title">Автоматические торговые системы позволяют трейдеру:</h3>
