--- a/broccoli/BroccoliMvc/Views/Home/Advisors/MaxTrade.cshtml
+++ b/broccoli/BroccoliMvc/Views/Home/Advisors/MaxTrade.cshtml
@@ -25,7 +25,7 @@
         <p><strong>Настройки:</strong></p>
         <p style="padding-top: 0;">MoneyManagement=3; FixedLot=0; KofATR=4.1; DynamicTP=10; ActivityControl=600; ATRperiod=23; Slippage=3; MagicNumber=543210; MarketExecution=true; ShiftClose=true; Hedging=true; Comments="Max-Trade";</p>
         <p>
-            <a class="btn" title="Открыть демо-счет" target="_blank" href="@Url.Content("~/Content/advisors/MaxTrade/Max-Trade_5_лет_3percent.htm")">
+            <a class="btn" title="Открыть демо-счет" target="_blank" href="@Url.Content("~/Content/advisors/MaxTrade/Max-Trade_5years_3percent.htm")">
 	            <span>Подробный отчет</span>
 	        </a>
         </p>
