--- a/broccoli/BroccoliMvc/Views/PersonalCabinet/PersonalCabinet.cshtml
+++ b/broccoli/BroccoliMvc/Views/PersonalCabinet/PersonalCabinet.cshtml
@@ -19,8 +19,8 @@
         <div id="pricing-table">
             <div class="plan plan1">
                 <div class="price-header">Money +</div>
-                <div class="price">200% - 300%</div>  
-                <div class="monthly">за 5 лет</div>      
+                <div class="price">4,9% - 192,8%</div>  
+                <div class="monthly">В год</div>      
                 <ul>
                     <li>Выставление риска <strong>Нет</strong></li>
                     <li>Минимальный депозит<br/><strong>Нет требований</strong></li>
@@ -32,8 +32,8 @@
             </div >
             <div class="plan plan2">
                 <div class="price-header two-line">Garanted Profit</div>
-                <div class="price">26,7% - 85,4%</div>
-                <div class="monthly">Годовых</div>  
+                <div class="price">33,7% - 196,4%</div>
+                <div class="monthly">В год</div>  
                 <ul>
                     <li>Выставление риска <strong>Есть</strong></li>
                     <li>Минимальный депозит<br/><strong>100$</strong></li>
@@ -46,7 +46,7 @@
             <div class="plan plan3 popular-plan">
                 <div class="price-header">Max trade</div>
                 <div class="price">48,9% - 1008,5%</div>
-                <div class="monthly">Годовых</div>
+                <div class="monthly">В год</div>
                 <ul>
                     <li>Выставление риска <strong>Есть</strong></li>
                     <li>Минимальный депозит<br/><strong>1000$</strong></li>
