--- a/broccoli/BroccoliMvc/Views/Home/Index.cshtml
+++ b/broccoli/BroccoliMvc/Views/Home/Index.cshtml
@@ -79,8 +79,8 @@
             <div id="pricing-table">
                 <div class="plan plan1">
                     <div class="price-header">Money +</div>
-                    <div class="price">200% - 300%</div>  
-                    <div class="monthly">за 5 лет</div>      
+                    <div class="price">4,9% - 192,8%</div>  
+                    <div class="monthly">В год</div>      
                     <ul>
                         <li>Выставление риска <strong>Нет</strong></li>
                         <li>Минимальный депозит<br/><strong>Нет требований</strong></li>
@@ -92,7 +92,7 @@
                 </div >
                 <div class="plan plan2">
                     <div class="price-header two-line">Garanted Profit</div>
-                    <div class="price">26,7% - 85,4%</div>
+                    <div class="price">33,7% - 196,4%</div>
                     <div class="monthly">В год</div>  
                     <ul>
                         <li>Выставление риска <strong>Есть</strong></li>
